src/App.css
.App {
  text-align: center;
  margin: 0 auto;
  width: 100%;
  height: 100vh;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 75px auto 1fr;
  /* grid-row-gap: 10px; */
}

.header {
    grid-column: 2/3;
    grid-row: 1/2;
}

.flagsDiv {
    grid-column: 2/3;
    grid-row: 2/3;
    margin: 10px;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, auto);
    box-shadow: 0 8px 6px -6px black;

}

.mapDiv {
    width: 800px;
    grid-column: 2/3;
    grid-row: 3/4;
    margin-top: 10px;
}

.correctDiv {
    grid-column: 1/2;
    grid-row: 2/3;
    background-color: white;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    opacity: 0.7;
}

.wrongDiv {
    grid-column: 2/3;
    grid-row: 2/3;
    background-color: white;
    opacity: 0.7;
}

.selectedDiv {
    grid-column: 3/4;
    grid-row: 2/3;
    background-color: white;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    opacity: 0.7;
}

.flagImgDiv {
    grid-column: 2/3;
    grid-row: 1/2;
    margin-bottom: 10px;
}


/* <a href='https://www.freepik.com/free-vector/travel-background-in-realistic-style_1919861.htm'>Designed by Freepik</a> */

